move some files

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="base.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/base.css">
 		<title>RIKa ASAI portfolio</title>
 
 	</head>
@@ -21,7 +21,7 @@
 				</nav>
 			</header>
 			<div id="contents">
-			<img src="images/top/top_hero1.png">
+			<img src="images/top_hero1.png">
 			</div>
 			<footer>
 			</footer>
