--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="wrapper">
 			<header>
-				<h1>charlotte</h1>
+				<h1><a href="index.html"><img src ="images/logo.png" alt="charlotte"></a></h1>
 				<nav>
 					<ul>
 						<li><a href="index.html">top</a></li>
@@ -23,6 +23,7 @@
 			<img src="images/top_hero1.png">
 			</div>
 			<footer>
+			<img src="images/copyright.png">
 			</footer>
 		</div>
 	</body>
