--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 	<body>
 		<div id="wrapper">
 			<header>
-				<h1><a href="index.html"><img src ="images/logo.png" alt="charlotte"></a></h1>
+				<a href="index.html" class="logo"><img src="images/logo.png" alt="charlotte"></a>
 				<nav>
 					<ul>
-						<li><a href="index.html">top</a></li>
-						<li><a href="profile.html">about me</a></li>
-						<li><a href="favorite.html">favorite</a></li>
-						<li><a href="dreams.html">instagram</a></li>
+						<li class="navigation active"><a class="nav1" href="index.html"></a></li>
+						<li class="navigation"><a class="nav2" href="profile.html"></a></li>
+						<li class="navigation"><a class="nav3" href="favorite.html"></a></li>
+						<li class="navigation"><a class="nav4" href="dreams.html"></a></li>
 					</ul>
 				</nav>
 			</header>
 			<div id="contents">
-			<img src="images/top_hero1.png">
+				<img src="images/top_hero1.png">
 			</div>
 			<footer>
-			<img src="images/copyright.png">
+				<img src="images/copyright.png">
 			</footer>
 		</div>
 	</body>
