--- a/favorite.html
+++ b/favorite.html
@@ -12,9 +12,9 @@
 				<a href="index.html" class="logo"><img src="images/logo.png" alt="charlotte"></a>
 				<nav>
 					<ul>
-						<li class="navigation active"><a class="nav1" href="index.html"></a></li>
+						<li class="navigation"><a class="nav1" href="index.html"></a></li>
 						<li class="navigation"><a class="nav2" href="aboutme.html"></a></li>
-						<li class="navigation"><a class="nav3" href="favorite.html"></a></li>
+						<li class="navigation active"><a class="nav3" href="favorite.html"></a></li>
 						<li class="navigation"><a class="nav4" href="instagram.html"></a></li>
 					</ul>
 				</nav>
