--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,9 @@
 			</header>
 			<div id="contents">
 				<img src="images/photo.png">
-				<img src="images/h2_aboutme.png">
+				<p class="h2_image">
+					<img src="images/h2_aboutme.png">
+				</p>
 							<table>
 				<tr>
 					<td>名前</td><td>浅井　りか</td>
