--- a/instagram.html
+++ b/instagram.html
@@ -20,7 +20,9 @@
 				</nav>
 			</header>
 			<div id="contents">
-				<img src="images/top_hero1.png">
+				<p class="h2_image">
+					<img src="images/h2_instagram.png">
+				</p>
 			</div>
 			<footer>
 				<img src="images/copyright.png">
