--- a/favorite.html
+++ b/favorite.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Asai Rikaのポートフォリオ">
+		<meta name="keywords" content="浅井りか,浅井　りか,ポートフォリオ">
+		<meta property="og:url" content="https://rikaasai.github.io/"/>
+		<meta property="og:title" content="Asai Rikaのポートフォリオ"/>
+		<meta property="og:description" content="Asai Rikaのポートフォリオ。プロフィールや好きな少女漫画のランキングを紹介！"/>
+		<meta http-equiv="refresh" content="10">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/base.css">
 		<title>RIKa ASAI portfolio</title>
@@ -27,38 +33,41 @@
 					<img src="images/crown_gold.png" class="image_crown">
 					<img src="images/comic_sutorobo.png" class="comics">
 					<h2>出てくる男子のイケメン度No.1<br>1位　「ストロボエッジ」</h2>
-					<p class="testimonials">何と言っても男の子がカッコイイ。ため息でること間違いなし。<br>
-黒髪クールイケメン蓮くん×茶髪チャライケメン安堂くんの<br>
-イケメン二人に主人公が挟まれるというよくある美味しい話だけど、<br>
-セリフとか主人公へのアプローチが新しく、そしてカッコイイ！<br>
-自分にされているような描写なので、キュンキュンが止まらない！<br>
-主人公に本気でなりたいと思った少女漫画です。</p>
+						<p class="testimonials">
+							何と言っても男の子がカッコイイ。ため息でること間違いなし。<br>
+							黒髪クールイケメン蓮くん×茶髪チャライケメン安堂くんの<br>
+							イケメン二人に主人公が挟まれるというよくある美味しい話だけど、<br>
+							セリフとか主人公へのアプローチが新しく、そしてカッコイイ！<br>
+							自分にされているような描写なので、キュンキュンが止まらない！<br>
+							主人公に本気でなりたいと思った少女漫画です。
+						</p>
 				</section>
 				<section>
 				<img src="images/crown_silver.png" class="image_crown">
 				<img src="images/comic_orange.png" class="comics">
 					<h2>SF・友情・泣ける漫画と言ったらコレ<br>２位　「orange」</h2>
-<p class="testimonials">
-主人公の健気さに、「頑張れ！（涙）」と応援したくなる漫画です。<br>
-「未来の世界では自殺で翔がいなくなる。だから、この手紙に<br>
-書いてあることを守ってほしい。」と、１０年後の自分から手紙を届く。<br>
-手紙が届いた、菜穂、アズ、須和、貴子、萩野は翔が自殺を図らないよ<br>
-うに、一致団結して、未来を変えようとする。<br>
-翔の命を救うために、勇気をだして行動するキャラクター達に感動し、<br>
-涙しちゃいますよ。
-</p>
+						<p class="testimonials">
+							主人公の健気さに、「頑張れ！（涙）」と応援したくなる漫画です。<br>
+							「未来の世界では自殺で翔がいなくなる。だから、この手紙に<br>
+							書いてあることを守ってほしい。」と、１０年後の自分から手紙を届く。<br>
+							手紙が届いた、菜穂、アズ、須和、貴子、萩野は翔が自殺を図らないよ<br>
+							うに、一致団結して、未来を変えようとする。<br>
+							翔の命を救うために、勇気をだして行動するキャラクター達に感動し、<br>
+							涙しちゃいますよ。
+						</p>
 				</section>
 				<section>
 					<img src="images/crown_copper.png" class="image_crown">
 					<img src="images/comic_yumemirutauyou.png" class="comics">
 					<h2>登場人物が全員主人公<br>3位　「夢みる太陽」　</h2>
-<p class="testimonials">絵が可愛い。主人公のしま奈が可愛い。<br>
-登場人物が全員が主人公のようにフォーカスが当てられ、<br>
-キャラ全員好きなっちゃいます。<br>
-ちなみに私は当て馬キャラクターの「善」が好き。<br>
-カンフーおたくで漫画家志望、常にパンダのぬいぐるみと<br>
-いるところも可愛いし、しま奈への振り向いて欲しさに<br>
-色々尽くすところにキュンとします/////。</p>
+						<p class="testimonials">絵が可愛い。主人公のしま奈が可愛い。<br>
+							登場人物が全員が主人公のようにフォーカスが当てられ、<br>
+							キャラ全員好きなっちゃいます。<br>
+							ちなみに私は当て馬キャラクターの「善」が好き。<br>
+							カンフーおたくで漫画家志望、常にパンダのぬいぐるみと<br>
+							いるところも可愛いし、しま奈への振り向いて欲しさに<br>
+							色々尽くすところにキュンとします/////。
+						</p>
 				</section>
 
 			</div>
