--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Asai Rikaのポートフォリオ">
+		<meta name="keywords" content="浅井りか,浅井　りか,ポートフォリオ">
+		<meta property="og:url" content="https://rikaasai.github.io/"/>
+		<meta property="og:title" content="Asai Rikaのポートフォリオ"/>
+		<meta property="og:description" content="Asai Rikaのポートフォリオ。プロフィールや好きな少女漫画のランキングを紹介！"/>
+		<meta http-equiv="refresh" content="10">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/base.css">
 		<title>RIKa ASAI portfolio</title>
