--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,6 @@
 		<meta property="og:url" content="https://rikaasai.github.io/"/>
 		<meta property="og:title" content="Asai Rikaのポートフォリオ"/>
 		<meta property="og:description" content="Asai Rikaのポートフォリオ。プロフィールや好きな少女漫画のランキングを紹介！"/>
-		<meta http-equiv="refresh" content="10">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/base.css">
 		<title>RIKa ASAI portfolio</title>
@@ -26,7 +25,7 @@
 				</nav>
 			</header>
 			<div id="contents">
-				<img src="images/photo.png">
+				<img src="images/aboutme_hero.jpg">
 				<p class="h2_image">
 					<img src="images/h2_aboutme.png">
 				</p>
