--- a/instagram.html
+++ b/instagram.html
@@ -9,6 +9,7 @@
 		<meta property="og:description" content="Asai Rikaのポートフォリオ。プロフィールや好きな少女漫画のランキングを紹介！"/>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/base.css">
+		<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/image/favicon.ico" />
 		<title>RIKa ASAI portfolio</title>
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="js/instafeedjs.js"></script>
