--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 				</nav>
 			</header>
 			<div id="contents">
-				<img src="images/aboutme_hero.jpg">
+				<img src="images/aboutme_hero2.jpg">
 				<p class="h2_image">
 					<img src="images/h2_aboutme.png">
 				</p>
