--- a/favorite.html
+++ b/favorite.html
@@ -59,14 +59,15 @@
 				<section>
 					<img src="images/crown_copper.png" class="image_crown">
 					<img src="images/comic_yumemirutauyou.png" class="comics">
-					<h2>登場人物が全員主人公<br>3位　「夢みる太陽」　</h2>
-						<p class="testimonials">絵が可愛い。主人公のしま奈が可愛い。<br>
-							登場人物が全員が主人公のようにフォーカスが当てられ、<br>
-							キャラ全員好きなっちゃいます。<br>
-							ちなみに私は当て馬キャラクターの「善」が好き。<br>
-							カンフーおたくで漫画家志望、常にパンダのぬいぐるみと<br>
-							いるところも可愛いし、しま奈への振り向いて欲しさに<br>
-							色々尽くすところにキュンとします/////。
+					<h2>登場人物が全員主人公！最後まで面白い！<br>3位　「夢みる太陽」　</h2>
+						<p class="testimonials">
+							絵が細かに描かれていて可愛い。主人公のしま奈が可愛い。<br>
+							登場人物全員が主人公のようにフォーカスが当てられ、<br>
+							それぞれのストーリーを楽しむことができるので、キャラ全員<br>
+							好きなっちゃいます。ちなみに私は当て馬キャラクターの「善」が好き。<br>
+							カンフーおたくで漫画家志望、パンダのぬいぐるみを携えている変な奴。<br>
+							でも、しま奈への振り向いて欲しさに色々尽くすところにキュン/////。
+							
 						</p>
 				</section>
 
